# BREAD

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  algo_reachability.h  bread  bread.cpp  cmake_install.cmake  config.cpp  config.h  graph.h  mylib.h  query_reachability.h  util.py
ARROW/: Node.cpp  TrieTable.cpp  hop  hop.cpp  main  main.cpp
ARROW/result/: arrow_result_bibsonomy_dynamic_1k.txt  arrow_result_bibsonomy_dynamic_hop_1k.txt
dataset/bibsonomy/: attribute.txt  bibsonomyGraph
gpu/: CudaUtil.cuh  Graph.h  GraphD.cuh  PprData.cuh  PprDataD.cuh  bread.cuh  config.h  heap.h  main  main.cu  mylib.h  query.h  util.h
gpu/result/: bippr_cuda_result_bibsonomy_dynamic_1k.txt
queryFile/bibsonomy/: bibsonomyQuery_dynamic_1k.txt  bibsonomyQuery_dynamic_hop_1k.txt  bibsonomyQuery_dynamic_hop_label_1k.txt  bibsonomyQuery_dynamic_label_1k.txt
result/: bread_result_bibsonomy_dynamic_1k.txt  hop_result_bibsonomy_dynamic_hop_1k.txt  rwbfs_result_bibsonomy_dynamic_hop_1k.txt
